# workopix

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  workopix.py
