[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "workopix"
version = "0.1.0"
description = "High-performance local image compressor & converter. Routes to the best native encoder (pngquant, mozjpeg, cwebp) and falls back to Pillow."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Zubair Mahboob", email = "zubair.niazi94@gmail.com" }]
keywords = ["image", "compression", "optimize", "png", "jpeg", "webp", "avif",
            "pngquant", "mozjpeg", "cli", "converter"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
dependencies = ["Pillow>=9"]

[project.optional-dependencies]
avif = ["pillow-avif-plugin>=1.4"]

[project.urls]
Homepage = "https://github.com/worko-dev/workopix"
Issues = "https://github.com/worko-dev/workopix/issues"

[project.scripts]
workopix = "workopix:main"

[tool.setuptools]
py-modules = ["workopix"]
