[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

# Project metadata lives in setup.cfg (static [metadata]/[options]) so that
# `pip install .` works even on older setuptools that can't read a [project]
# table. See setup.cfg for name, version, dependencies, and the CLI entry point.
