[metadata]
name = workopix
version = 0.1.0
description = High-performance local image compressor & converter. Routes to the best native encoder (pngquant, mozjpeg, cwebp) and falls back to Pillow.
long_description = file: README.md
long_description_content_type = text/markdown
author = Zubair Mahboob
author_email = zubair.niazi94@gmail.com
license = MIT
license_files = LICENSE
url = https://github.com/worko-dev/workopix
project_urls =
    Homepage = https://github.com/worko-dev/workopix
    Issues = https://github.com/worko-dev/workopix/issues
keywords = image, compression, optimize, png, jpeg, webp, avif, pngquant, mozjpeg, cli, converter
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Environment :: Console
    Operating System :: OS Independent
    Topic :: Multimedia :: Graphics :: Graphics Conversion

[options]
py_modules = workopix
python_requires = >=3.9
install_requires =
    Pillow>=9

[options.extras_require]
avif =
    pillow-avif-plugin>=1.4

[options.entry_points]
console_scripts =
    workopix = workopix:main
